--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "live-server": "^1.2.1",
+    "massive": "^6.7.1",
+    "npm": "^7.8.0",
     "path": "^0.12.7",
     "puppeteer": "^8.0.0",
     "react": "^17.0.2",
@@ -45,5 +47,5 @@
     ]
   },
   "main": "server/vault.js",
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:3131"
 }
