--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "live-server": "^1.2.1",
     "massive": "^6.7.1",
     "npm": "^7.8.0",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.4.0",
     "path": "^0.12.7",
     "puppeteer": "^8.0.0",
     "react": "^17.0.2",
