--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^1.4.1",
     "live-server": "^1.2.1",
     "massive": "^6.7.1",
     "npm": "^7.8.0",
     "passport": "^0.4.1",
     "passport-auth0": "^1.4.0",
     "path": "^0.12.7",
-    "puppeteer": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
