--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.3.2",
     "jspdf": "^1.4.1",
     "live-server": "^1.2.1",
+    "lodash": "^4.17.21",
     "massive": "^6.7.1",
     "npm": "^7.8.0",
     "passport": "^0.4.1",
