--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.3.1",
+    "react-toastify": "^9.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
